// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceDetailsScreenCdc should match snapshot when service is active 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={2}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        collapsable={false}
                        contentContainerStyle={
                          [
                            {
                              "paddingBottom": 56,
                              "paddingHorizontal": 0,
                            },
                            {},
                          ]
                        }
                        decelerationRate="normal"
                        forwardedRef={[Function]}
                        jestAnimatedProps={
                          {
                            "value": {},
                          }
                        }
                        jestAnimatedStyle={
                          {
                            "value": {},
                          }
                        }
                        nativeID="8"
                        onScroll={[Function]}
                        scrollEventThrottle={8}
                        snapToEnd={false}
                        snapToOffsets={
                          [
                            0,
                            0,
                          ]
                        }
                      >
                        <View>
                          <Text
                            allowFontScaling={true}
                            dynamicTypeRamp="body"
                            maxFontSizeMultiplier={1.5}
                            style={
                              [
                                {},
                                {
                                  "color": "#555C70",
                                  "fontFamily": "Titillio",
                                  "fontSize": 16,
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                  "lineHeight": 24,
                                },
                              ]
                            }
                          >
                            DUMMY
                          </Text>
                        </View>
                      </RCTScrollView>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          accessibilityRole="header"
                          collapsable={false}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "backgroundColor": "rgba(244, 245, 248, 1)",
                                "borderColor": "rgba(244, 245, 248, 0)",
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "borderBottomWidth": 1,
                                "borderColor": "rgba(244,245,248,0)",
                              },
                              {},
                            ]
                          }
                          nativeID="9"
                          style={
                            [
                              {
                                "borderBottomWidth": 1,
                                "borderColor": "rgba(244,245,248,0)",
                              },
                              {},
                              {
                                "backgroundColor": "rgba(244, 245, 248, 1)",
                                "borderColor": "rgba(244, 245, 248, 0)",
                              },
                            ]
                          }
                        >
                          <View
                            collapsable={false}
                            jestAnimatedProps={
                              {
                                "value": {},
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": {
                                  "marginTop": 0,
                                },
                              }
                            }
                            jestInlineStyle={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "height": 56,
                                  "justifyContent": "space-between",
                                  "paddingHorizontal": 24,
                                },
                              ]
                            }
                            nativeID="10"
                            style={
                              [
                                {
                                  "marginTop": 0,
                                },
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "height": 56,
                                  "justifyContent": "space-between",
                                  "paddingHorizontal": 24,
                                },
                              ]
                            }
                          >
                            <View
                              accessibilityLabel="Indietro"
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": false,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              hitSlop={8}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <View
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {
                                      "transform": [
                                        {
                                          "scale": 1,
                                        },
                                      ],
                                    },
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                nativeID="11"
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "height": 24,
                                      "width": 24,
                                    },
                                    {
                                      "transform": [
                                        {
                                          "scale": 1,
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <RNSVGSvgView
                                  accessibilityElementsHidden={true}
                                  accessibilityLabel=""
                                  accessible={false}
                                  align="xMidYMid"
                                  bbHeight={36}
                                  bbWidth={36}
                                  collapsable={false}
                                  color="#0E0F13"
                                  focusable={false}
                                  height={36}
                                  importantForAccessibility="no-hide-descendants"
                                  jestAnimatedProps={
                                    {
                                      "value": {
                                        "color": "rgba(14, 15, 19, 1)",
                                      },
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {},
                                    }
                                  }
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  nativeID="12"
                                  style={
                                    [
                                      {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      {
                                        "flex": 0,
                                        "height": 36,
                                        "width": 36,
                                      },
                                    ]
                                  }
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={36}
                                >
                                  <RNSVGGroup
                                    fill={
                                      {
                                        "payload": 4278190080,
                                        "type": 0,
                                      }
                                    }
                                  >
                                    <RNSVGPath
                                      clipRule={0}
                                      d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                      fill={
                                        {
                                          "type": 2,
                                        }
                                      }
                                      fillRule={0}
                                      propList={
                                        [
                                          "fill",
                                          "fillRule",
                                        ]
                                      }
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                              </View>
                            </View>
                            <View
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessibilityRole="header"
                              accessible={false}
                              importantForAccessibility="yes"
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "marginHorizontal": 16,
                                }
                              }
                            >
                              <Text
                                accessible={false}
                                allowFontScaling={true}
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {
                                      "opacity": 0,
                                    },
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "color": "#0E0F13",
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                                maxFontSizeMultiplier={1.5}
                                nativeID="13"
                                numberOfLines={1}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0E0F13",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": undefined,
                                    },
                                    [
                                      {
                                        "color": "#0E0F13",
                                        "textAlign": "center",
                                      },
                                      {
                                        "opacity": 0,
                                      },
                                    ],
                                  ]
                                }
                              />
                            </View>
                            <View
                              style={
                                {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "flexShrink": 0,
                                  "gap": 24,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Aiuto contestuale"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  collapsable={false}
                                  jestAnimatedProps={
                                    {
                                      "value": {},
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {
                                        "transform": [
                                          {
                                            "scale": 1,
                                          },
                                        ],
                                      },
                                    }
                                  }
                                  jestInlineStyle={
                                    [
                                      {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                    ]
                                  }
                                  nativeID="14"
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      {
                                        "transform": [
                                          {
                                            "scale": 1,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    bbHeight={36}
                                    bbWidth={36}
                                    collapsable={false}
                                    color="#0E0F13"
                                    focusable={false}
                                    height={36}
                                    importantForAccessibility="no-hide-descendants"
                                    jestAnimatedProps={
                                      {
                                        "value": {
                                          "color": "rgba(14, 15, 19, 1)",
                                        },
                                      }
                                    }
                                    jestAnimatedStyle={
                                      {
                                        "value": {},
                                      }
                                    }
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    nativeID="15"
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 36,
                                          "width": 36,
                                        },
                                      ]
                                    }
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={36}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M6 8c0-3.31371 2.68629-6 6-6 3.3137 0 6 2.68629 6 6 0 2.7248-1.8172 5.0278-4.3079 5.7583C12.3754 14.1446 11 15.2973 11 17v1c0 .5523.4477 1 1 1s1-.4477 1-1v-1c0-.5064.452-1.087 1.255-1.3225C17.5744 14.7039 20 11.6365 20 8c0-4.41828-3.5817-8-8-8-4.41828 0-8 3.58172-8 8 0 .55228.44772 1 1 1s1-.44772 1-1Zm7.5 14.5c0 .8284-.6716 1.5-1.5 1.5s-1.5-.6716-1.5-1.5.6716-1.5 1.5-1.5 1.5.6716 1.5 1.5Z"
                                        fill={
                                          {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 44,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;

exports[`ServiceDetailsScreenCdc should match snapshot when service is not enabled 1`] = `
<View
  style={
    {
      "flex": 1,
    }
  }
>
  <RNCSafeAreaProvider
    onInsetsChange={[Function]}
    style={
      [
        {
          "flex": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        [
          {
            "backgroundColor": "#FFFFFF",
            "flex": 1,
          },
          undefined,
        ]
      }
    >
      <RNSScreenContainer
        onLayout={[Function]}
        style={
          {
            "flex": 1,
          }
        }
      >
        <RNSScreen
          activityState={2}
          collapsable={false}
          gestureResponseDistance={
            {
              "bottom": -1,
              "end": -1,
              "start": -1,
              "top": -1,
            }
          }
          onGestureCancel={[Function]}
          pointerEvents="box-none"
          sheetAllowedDetents={
            [
              1,
            ]
          }
          sheetCornerRadius={-1}
          sheetElevation={24}
          sheetExpandsWhenScrolledToEdge={true}
          sheetGrabberVisible={false}
          sheetInitialDetent={0}
          sheetLargestUndimmedDetent={-1}
          style={
            {
              "bottom": 0,
              "left": 0,
              "position": "absolute",
              "right": 0,
              "top": 0,
              "zIndex": undefined,
            }
          }
        >
          <View
            collapsable={false}
            style={
              {
                "opacity": 1,
              }
            }
          />
          <View
            accessibilityElementsHidden={false}
            closing={false}
            collapsable={false}
            gestureVelocityImpact={0.3}
            importantForAccessibility="auto"
            onClose={[Function]}
            onGestureBegin={[Function]}
            onGestureCanceled={[Function]}
            onGestureEnd={[Function]}
            onOpen={[Function]}
            onTransition={[Function]}
            pointerEvents="box-none"
            style={
              [
                {
                  "display": "flex",
                  "overflow": undefined,
                },
                {
                  "bottom": 0,
                  "left": 0,
                  "position": "absolute",
                  "right": 0,
                  "top": 0,
                },
              ]
            }
            transitionSpec={
              {
                "close": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
                "open": {
                  "animation": "spring",
                  "config": {
                    "damping": 500,
                    "mass": 3,
                    "overshootClamping": true,
                    "restDisplacementThreshold": 10,
                    "restSpeedThreshold": 10,
                    "stiffness": 1000,
                  },
                },
              }
            }
          >
            <View
              collapsable={false}
              pointerEvents="box-none"
              style={
                {
                  "flex": 1,
                }
              }
            >
              <View
                collapsable={false}
                enabled={false}
                handlerTag={1}
                handlerType="PanGestureHandler"
                needsOffscreenAlphaCompositing={false}
                onGestureHandlerEvent={[Function]}
                onGestureHandlerStateChange={[Function]}
                style={
                  {
                    "flex": 1,
                    "transform": [
                      {
                        "translateX": 0,
                      },
                      {
                        "translateX": 0,
                      },
                    ],
                  }
                }
              >
                <View
                  pointerEvents="box-none"
                  style={
                    [
                      {
                        "flex": 1,
                        "overflow": "hidden",
                      },
                      [
                        {
                          "backgroundColor": "#FFFFFF",
                        },
                        undefined,
                      ],
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "flex": 1,
                        "flexDirection": "column-reverse",
                      }
                    }
                  >
                    <View
                      style={
                        {
                          "flex": 1,
                        }
                      }
                    >
                      <RCTScrollView
                        collapsable={false}
                        contentContainerStyle={
                          [
                            {
                              "paddingBottom": 56,
                              "paddingHorizontal": 0,
                            },
                            {},
                          ]
                        }
                        decelerationRate="normal"
                        forwardedRef={[Function]}
                        jestAnimatedProps={
                          {
                            "value": {},
                          }
                        }
                        jestAnimatedStyle={
                          {
                            "value": {},
                          }
                        }
                        nativeID="0"
                        onScroll={[Function]}
                        scrollEventThrottle={8}
                        snapToEnd={false}
                        snapToOffsets={
                          [
                            0,
                            0,
                          ]
                        }
                      >
                        <View>
                          <Text
                            allowFontScaling={true}
                            dynamicTypeRamp="body"
                            maxFontSizeMultiplier={1.5}
                            style={
                              [
                                {},
                                {
                                  "color": "#555C70",
                                  "fontFamily": "Titillio",
                                  "fontSize": 16,
                                  "fontStyle": "normal",
                                  "fontWeight": "400",
                                  "lineHeight": 24,
                                },
                              ]
                            }
                          >
                            DUMMY
                          </Text>
                        </View>
                      </RCTScrollView>
                    </View>
                    <View
                      collapsable={false}
                      pointerEvents="box-none"
                    >
                      <View
                        accessibilityElementsHidden={false}
                        importantForAccessibility="auto"
                        onLayout={[Function]}
                        pointerEvents="box-none"
                        style={null}
                      >
                        <View
                          accessibilityRole="header"
                          collapsable={false}
                          jestAnimatedProps={
                            {
                              "value": {},
                            }
                          }
                          jestAnimatedStyle={
                            {
                              "value": {
                                "backgroundColor": "rgba(244, 245, 248, 1)",
                                "borderColor": "rgba(244, 245, 248, 0)",
                              },
                            }
                          }
                          jestInlineStyle={
                            [
                              {
                                "borderBottomWidth": 1,
                                "borderColor": "rgba(244,245,248,0)",
                              },
                              {},
                            ]
                          }
                          nativeID="1"
                          style={
                            [
                              {
                                "borderBottomWidth": 1,
                                "borderColor": "rgba(244,245,248,0)",
                              },
                              {},
                              {
                                "backgroundColor": "rgba(244, 245, 248, 1)",
                                "borderColor": "rgba(244, 245, 248, 0)",
                              },
                            ]
                          }
                        >
                          <View
                            collapsable={false}
                            jestAnimatedProps={
                              {
                                "value": {},
                              }
                            }
                            jestAnimatedStyle={
                              {
                                "value": {
                                  "marginTop": 0,
                                },
                              }
                            }
                            jestInlineStyle={
                              [
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "height": 56,
                                  "justifyContent": "space-between",
                                  "paddingHorizontal": 24,
                                },
                              ]
                            }
                            nativeID="2"
                            style={
                              [
                                {
                                  "marginTop": 0,
                                },
                                {
                                  "alignItems": "center",
                                  "flexDirection": "row",
                                  "flexGrow": 1,
                                  "height": 56,
                                  "justifyContent": "space-between",
                                  "paddingHorizontal": 24,
                                },
                              ]
                            }
                          >
                            <View
                              accessibilityLabel="Indietro"
                              accessibilityRole="button"
                              accessibilityState={
                                {
                                  "busy": undefined,
                                  "checked": undefined,
                                  "disabled": false,
                                  "expanded": undefined,
                                  "selected": undefined,
                                }
                              }
                              accessibilityValue={
                                {
                                  "max": undefined,
                                  "min": undefined,
                                  "now": undefined,
                                  "text": undefined,
                                }
                              }
                              accessible={true}
                              collapsable={false}
                              focusable={true}
                              hitSlop={8}
                              onBlur={[Function]}
                              onClick={[Function]}
                              onFocus={[Function]}
                              onResponderGrant={[Function]}
                              onResponderMove={[Function]}
                              onResponderRelease={[Function]}
                              onResponderTerminate={[Function]}
                              onResponderTerminationRequest={[Function]}
                              onStartShouldSetResponder={[Function]}
                            >
                              <View
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {
                                      "transform": [
                                        {
                                          "scale": 1,
                                        },
                                      ],
                                    },
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "height": 24,
                                      "width": 24,
                                    },
                                  ]
                                }
                                nativeID="3"
                                style={
                                  [
                                    {
                                      "alignItems": "center",
                                      "justifyContent": "center",
                                    },
                                    {
                                      "height": 24,
                                      "width": 24,
                                    },
                                    {
                                      "transform": [
                                        {
                                          "scale": 1,
                                        },
                                      ],
                                    },
                                  ]
                                }
                              >
                                <RNSVGSvgView
                                  accessibilityElementsHidden={true}
                                  accessibilityLabel=""
                                  accessible={false}
                                  align="xMidYMid"
                                  bbHeight={36}
                                  bbWidth={36}
                                  collapsable={false}
                                  color="#0E0F13"
                                  focusable={false}
                                  height={36}
                                  importantForAccessibility="no-hide-descendants"
                                  jestAnimatedProps={
                                    {
                                      "value": {
                                        "color": "rgba(14, 15, 19, 1)",
                                      },
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {},
                                    }
                                  }
                                  meetOrSlice={0}
                                  minX={0}
                                  minY={0}
                                  nativeID="4"
                                  style={
                                    [
                                      {
                                        "backgroundColor": "transparent",
                                        "borderWidth": 0,
                                      },
                                      {
                                        "flex": 0,
                                        "height": 36,
                                        "width": 36,
                                      },
                                    ]
                                  }
                                  vbHeight={24}
                                  vbWidth={24}
                                  width={36}
                                >
                                  <RNSVGGroup
                                    fill={
                                      {
                                        "payload": 4278190080,
                                        "type": 0,
                                      }
                                    }
                                  >
                                    <RNSVGPath
                                      clipRule={0}
                                      d="M12.7071.2929c-.3905-.39053-1.0237-.39053-1.4142 0l-11 11c-.39053.3905-.39053 1.0237 0 1.4142l11 11c.3905.3905 1.0237.3905 1.4142 0 .3905-.3905.3905-1.0237 0-1.4142L2.41421 12 12.7071 1.70711c.3905-.39053.3905-1.0237 0-1.41422Z"
                                      fill={
                                        {
                                          "type": 2,
                                        }
                                      }
                                      fillRule={0}
                                      propList={
                                        [
                                          "fill",
                                          "fillRule",
                                        ]
                                      }
                                    />
                                  </RNSVGGroup>
                                </RNSVGSvgView>
                              </View>
                            </View>
                            <View
                              accessibilityElementsHidden={true}
                              accessibilityLabel=""
                              accessibilityRole="header"
                              accessible={false}
                              importantForAccessibility="yes"
                              style={
                                {
                                  "flexGrow": 1,
                                  "flexShrink": 1,
                                  "marginHorizontal": 16,
                                }
                              }
                            >
                              <Text
                                accessible={false}
                                allowFontScaling={true}
                                collapsable={false}
                                jestAnimatedProps={
                                  {
                                    "value": {},
                                  }
                                }
                                jestAnimatedStyle={
                                  {
                                    "value": {
                                      "opacity": 0,
                                    },
                                  }
                                }
                                jestInlineStyle={
                                  [
                                    {
                                      "color": "#0E0F13",
                                      "textAlign": "center",
                                    },
                                  ]
                                }
                                maxFontSizeMultiplier={1.5}
                                nativeID="5"
                                numberOfLines={1}
                                style={
                                  [
                                    {},
                                    {
                                      "color": "#0E0F13",
                                      "fontFamily": "Titillio",
                                      "fontSize": 14,
                                      "fontStyle": "normal",
                                      "fontWeight": "600",
                                      "lineHeight": undefined,
                                    },
                                    [
                                      {
                                        "color": "#0E0F13",
                                        "textAlign": "center",
                                      },
                                      {
                                        "opacity": 0,
                                      },
                                    ],
                                  ]
                                }
                              />
                            </View>
                            <View
                              style={
                                {
                                  "display": "flex",
                                  "flexDirection": "row",
                                  "flexShrink": 0,
                                  "gap": 24,
                                }
                              }
                            >
                              <View
                                accessibilityLabel="Aiuto contestuale"
                                accessibilityRole="button"
                                accessibilityState={
                                  {
                                    "busy": undefined,
                                    "checked": undefined,
                                    "disabled": false,
                                    "expanded": undefined,
                                    "selected": undefined,
                                  }
                                }
                                accessibilityValue={
                                  {
                                    "max": undefined,
                                    "min": undefined,
                                    "now": undefined,
                                    "text": undefined,
                                  }
                                }
                                accessible={true}
                                collapsable={false}
                                focusable={true}
                                hitSlop={8}
                                onBlur={[Function]}
                                onClick={[Function]}
                                onFocus={[Function]}
                                onResponderGrant={[Function]}
                                onResponderMove={[Function]}
                                onResponderRelease={[Function]}
                                onResponderTerminate={[Function]}
                                onResponderTerminationRequest={[Function]}
                                onStartShouldSetResponder={[Function]}
                              >
                                <View
                                  collapsable={false}
                                  jestAnimatedProps={
                                    {
                                      "value": {},
                                    }
                                  }
                                  jestAnimatedStyle={
                                    {
                                      "value": {
                                        "transform": [
                                          {
                                            "scale": 1,
                                          },
                                        ],
                                      },
                                    }
                                  }
                                  jestInlineStyle={
                                    [
                                      {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                    ]
                                  }
                                  nativeID="6"
                                  style={
                                    [
                                      {
                                        "alignItems": "center",
                                        "justifyContent": "center",
                                      },
                                      {
                                        "height": 24,
                                        "width": 24,
                                      },
                                      {
                                        "transform": [
                                          {
                                            "scale": 1,
                                          },
                                        ],
                                      },
                                    ]
                                  }
                                >
                                  <RNSVGSvgView
                                    accessibilityElementsHidden={true}
                                    accessibilityLabel=""
                                    accessible={false}
                                    align="xMidYMid"
                                    bbHeight={36}
                                    bbWidth={36}
                                    collapsable={false}
                                    color="#0E0F13"
                                    focusable={false}
                                    height={36}
                                    importantForAccessibility="no-hide-descendants"
                                    jestAnimatedProps={
                                      {
                                        "value": {
                                          "color": "rgba(14, 15, 19, 1)",
                                        },
                                      }
                                    }
                                    jestAnimatedStyle={
                                      {
                                        "value": {},
                                      }
                                    }
                                    meetOrSlice={0}
                                    minX={0}
                                    minY={0}
                                    nativeID="7"
                                    style={
                                      [
                                        {
                                          "backgroundColor": "transparent",
                                          "borderWidth": 0,
                                        },
                                        {
                                          "flex": 0,
                                          "height": 36,
                                          "width": 36,
                                        },
                                      ]
                                    }
                                    vbHeight={24}
                                    vbWidth={24}
                                    width={36}
                                  >
                                    <RNSVGGroup
                                      fill={
                                        {
                                          "payload": 4278190080,
                                          "type": 0,
                                        }
                                      }
                                    >
                                      <RNSVGPath
                                        clipRule={0}
                                        d="M6 8c0-3.31371 2.68629-6 6-6 3.3137 0 6 2.68629 6 6 0 2.7248-1.8172 5.0278-4.3079 5.7583C12.3754 14.1446 11 15.2973 11 17v1c0 .5523.4477 1 1 1s1-.4477 1-1v-1c0-.5064.452-1.087 1.255-1.3225C17.5744 14.7039 20 11.6365 20 8c0-4.41828-3.5817-8-8-8-4.41828 0-8 3.58172-8 8 0 .55228.44772 1 1 1s1-.44772 1-1Zm7.5 14.5c0 .8284-.6716 1.5-1.5 1.5s-1.5-.6716-1.5-1.5.6716-1.5 1.5-1.5 1.5.6716 1.5 1.5Z"
                                        fill={
                                          {
                                            "type": 2,
                                          }
                                        }
                                        fillRule={0}
                                        propList={
                                          [
                                            "fill",
                                            "fillRule",
                                          ]
                                        }
                                      />
                                    </RNSVGGroup>
                                  </RNSVGSvgView>
                                </View>
                              </View>
                            </View>
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </RNSScreen>
      </RNSScreenContainer>
      <View
        collapsable={false}
        pointerEvents="box-none"
        style={
          {
            "height": 44,
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "zIndex": 1,
          }
        }
      />
    </View>
  </RNCSafeAreaProvider>
</View>
`;
